--- a/blogs/20200817/用户地理位置的聚类算法实现.md
+++ b/blogs/20200817/用户地理位置的聚类算法实现.md
@@ -216,8 +216,6 @@ plt.show()
 
 以下实现主要选取了基于划分的Kmeans算法和基于密度的DBSCAN算法来处理。
 
-本实验用python实现，依赖numpy, pandas, sklearn, scipy等科学计算library。
-
 数据来自收集得到的用户的地理位置信息，即经纬度数据的序列集。
 
 ```python
@@ -257,16 +255,23 @@ res, idx = kmeans2(numpy.array(zip(xy[:, 0], xy[:, 1], z)), 2, iter=20, minit='p
 实现输出结果
 ![](https://cdn.nlark.com/yuque/0/2020/jpg/772088/1589133746293-2e0db22b-233f-44ce-ac98-d15145f4ac37.jpg#align=left&display=inline&height=109&margin=%5Bobject%20Object%5D&originHeight=109&originWidth=639&status=done&style=none&width=639)
 但是实际上用户并未在河北出现过，用户经常出现的地方除了北京的工作地方和家，还曾经在南京出差一段时间。所以将K值设定为3，再次运行
+
 ```python
 res, idx = kmeans2(numpy.array(zip(xy[:, 0], xy[:, 1], z)), 3, iter=20, minit='points')
 ```
 输出结果
+
 ![](https://cdn.nlark.com/yuque/0/2020/jpg/772088/1589133746361-afedc044-d683-4af1-bc3e-430288700534.jpg#align=left&display=inline&height=158&margin=%5Bobject%20Object%5D&originHeight=158&originWidth=639&status=done&style=none&width=639)
+
 这样就将南京的地理位置区分出来了。工作地方和出差地方已经非常贴合了，但是家的地方离实际距离还是差了不少距离。
+
 其实已经可以看出来，由于用户的出现地点不可预知，因此**很难确定K值**。并且**Kmeans聚合得到的结果取得是聚合簇的质心位置，并不是用户的实际地理位置**，而且我选取的是相似度量是欧式距离，而不是经纬度计算的球面距离。因此得到的结果并不理想。
+
 #### 3. 基于DBSCAN的聚类实现
 DBSCAN算法的重点是选取的聚合半径参数和聚合所需指定的MinPts数目。
+
 在此使用球面距离来衡量地理位置的距离，来作为聚合的半径参数。
+
 如下实验，选取2公里作为密度聚合的半径参数，MinPts个数为5.
 
 ```python
@@ -291,8 +296,11 @@ def clustering_by_dbscan():
     plt.show()
 ```
 输出如下
+
 ![](https://cdn.nlark.com/yuque/0/2020/jpg/772088/1589133746406-2da1f2e1-d2a1-4a44-814a-8279ba4a342f.jpg#align=left&display=inline&height=80&margin=%5Bobject%20Object%5D&originHeight=80&originWidth=848&status=done&style=none&width=848)
+
 结果显示该用户的地理位置信息聚合簇为4块，在结果中分别用0.0,1.0，2.0，-1.0来标记。可以看出DBSCAN算法可以根据用户的活动半径，也就是设定的最小半径参数2公里，将用户的活动地理位置数据集合分为了4簇，而且每一簇**在空间上都是任意形状的**，分类聚合的效果是不错的，但是得到的结果是一个个的簇，也就是一个个的地理点的集合，并不是一个“中心”。并且存在的**噪声点**无法区分。
+
 #### 4. 基于DBSCAN和Kmeans的混合算法实现
 从上面的实验结果，Kmeans算法的关键的是 K值的选取，而我无法确定用户地理信息聚类的簇的个数，如果实际上的地理位置的分布过于分散，按照固定K值聚合，得到的质心的位置可能和实际位置相差甚远。而DBSCAN的算法，聚类结果不错，因为是按照设定的人的活动半径的密度可达来聚合的，但其结果是将数据集合分类，并不求出**中心点**。
 
@@ -352,90 +360,18 @@ def clustering_by_dbscan_and_kmeans2():
         print res, address_text
 ```
 输出如下
-![](https://cdn.nlark.com/yuque/0/2020/jpg/772088/1589133746448-4e0b1ef5-ba44-4001-84ae-4cfc4e5c4528.jpg#align=left&display=inline&height=127&margin=%5Bobject%20Object%5D&originHeight=127&originWidth=853&status=done&style=none&width=853)
-其中”家“，”公司“，”出差“的位置信息已经非常贴合用户的实际信息了。
-但是仍然存在的**噪声点**的信息。这个暂时还没找到解决方案，下一步的思路是带入用户地理位置信息收集时候得到的附属信息如时间来辅助分析，希望可以有更好的结果。
-### 二、聚类算法学习----之----sklearn.cluster.KMeans
-`class sklearn.cluster.KMeans(n_clusters=8, init=’k-means++’, n_init=10, max_iter=300, tol=0.0001, precompute_distances=’auto’, verbose=0, random_state=None, copy_x=True, n_jobs=1, algorithm=’auto’)`
-#### （一）输入参数：
-（1）n_clusters：分成的簇数（要生成的质心数）=====>整型，[可选]，默认值=8；
-`n_clusters : int, optional, default: 8  The number of clusters to form as well as the number of centroids to generate.`
-（2）init：初始化质心的方法====>有三个可选值：'k-means++'， 'random'，或者传递一个ndarray向量，默认为'k-means++'
-‘k-means++’ 用一种智能的方法选定初始质心从而能加速迭代过程的收敛，参见 k_init 的解释获取更多信息。
-‘random’ 随机从训练数据中选取初始质心。
-如果传递的是一个ndarray，则应该形如 (n_clusters, n_features) 并给出初始质心。
-**init** : {‘k-means++’, ‘random’ or an ndarray}
-Method for initialization, defaults to ‘k-means++’:
-> ‘k-means++’ : selects initial cluster centers for k-mean clustering in a smart way to speed up convergence. See section Notes in k_init for more details.
-> ‘random’: choose k observations (rows) at random from data for the initial centroids.
-> If an ndarray is passed, it should be of shape (n_clusters, n_features) and gives the initial centers.
 
-（3）n_init:：用不同的质心初始化值运行算法的次数====>整型，默认值=10次，最终解是在inertia意义下选出的最优结果。
-（ps：每一次算法运行时开始的centroid seeds是随机生成的, 这样得到的结果也可能有好有坏. 所以要运行算法n_init次, 取其中最好的。）
-**n_init** :  int, default: 10
-Number of time the k-means algorithm will be run with different centroid seeds. The final results will be the best output of n_init consecutive runs in terms of inertia.
-**max_iter** : int, default: 300
-Maximum number of iterations of the k-means algorithm for a single run.
-（5）tol：与inertia结合来确定收敛条件====> float型，默认值= 1e-4
-**tol** : float, default: 1e-4
-Relative tolerance with regards to inertia to declare convergence
-（6）precompute_distances：预计算距离，计算速度更快但占用更多内存 ====>类型：（auto，True，False）三个值可选，,默认值=“auto”
-‘auto’：如果样本数乘以聚类数大于 12million 的话则不预计算距离‘’
-‘True‘：总是预先计算距离。
-‘False‘：永远不预先计算距离。
-这个参数会在空间和时间之间做权衡，如果是True 会把整个距离矩阵都放到内存中，auto 会默认在数据样本大于featurs*samples 的数量大于12e6 的时候False,False时
-核心实现的方法是利用Cpython 来实现的
-**precompute_distances** : {‘auto’, True, False}
-Precompute distances (faster but takes more memory).
-‘auto’ : do not precompute distances if n_samples * n_clusters > 12 million. This corresponds to about 100MB overhead per job usingdoubleprecision.
-True : always precompute distances
-False : never precompute distances
-（7）verbose:是否输出详细信息====>类型：整型，默认值=0
-**verbose** : int, default 0
-Verbosity mode.
-（8）random_state： 用于初始化质心的生成器（generator），和初始化中心有关。
-**random_state** : int, RandomState instance or None, optional, default: None
-If int, random_state is the seed used by the random number generator;
-If RandomState instance, random_state is the random numbergenerator;
-If None, the random number generator is the RandomState instance used by np.random.
-（9）copy_x：是否对输入数据继续copy 操作====> 布尔型，默认值=True
-当我们precomputing distances时，将数据中心化会得到更准确的结果。
-如果把此参数值设为True，则原始数据不会被改变。
-如果是False，则会直接在原始数据上做修改并在函数返回值时将其还原。
-但是在计算过程中由于有对数据均值的加减运算，所以数据返回后，原始数据和计算前可能会有细小差别。
-**copy_x** : boolean, default True
-When pre-computing distances it is more numerically accurate to center the data first.
-If copy_x is True, then the original data is not modified.
-If False, the original data is modified, and put back before the function returns,
-but small numerical differences may be introduced by subtracting and then adding the data mean.
-（10）n_jobs：使用进程的数量，与电脑的CPU有关====>类型：整型，默认值=1
-指定计算所用的进程数。内部原理是同时进行n_init指定次数的计算。
-若值为 -1，则用所有的CPU进行运算。
-若值为1，则不进行并行运算，这样的话方便调试。
-若值小于-1，则用到的CPU数为(n_cpus + 1 + n_jobs)。因此如果 n_jobs值为-2，则用到的CPU数为总CPU数减1。
-**n_jobs** :  int
-The number of jobs to use for the computation. This works by computing  each of the n_init runs in parallel.
-If -1 all CPUs are used.
-If 1 is given, no parallel computing  code is used at all, which is useful for debugging.
-For n_jobs below -1, (n_cpus +  1 + n_jobs) are used. Thus for n_jobs = -2, all CPUs but one are used.
-（11）algorithm：k-means算法的种类====>（“auto”, “full” or “elkan”）三个值可选，默认值=‘auto’
-“full”采用的是经典EM-style算法的。
-“elkan”则在使用三角不等式时显得更为高效,但目前不支持稀疏数据。
-“auto”则在密集数据时选择“elkan”，在稀疏数据是选择“full”。
-algorithm : : “auto”, “full” or “elkan”, default=”auto”
-K-means algorithm to use. The classical EM-style algorithm is “full”.
-The “elkan” variation is more efficient by using the triangle inequality, but currently doesn’t support sparse data.
-“auto” chooses “elkan” for dense data and “full” for sparse data.
-#### （二）属性
-cluster_centers_：向量，[n_clusters, n_features]
-Coordinates of cluster centers (找出聚类中心)
-Labels_:每个点的分类
-inertia_：float型，每个点到其簇的质心的距离之和。
-**cluster_centers_** : array, [n_clusters, n_features]
-Coordinates of cluster centers
-**labels_ :** :Labels of each point
-**inertia_** : float,Sum of distances of samples to their closest cluster center.
-#### （三）例子
+![](https://cdn.nlark.com/yuque/0/2020/jpg/772088/1589133746448-4e0b1ef5-ba44-4001-84ae-4cfc4e5c4528.jpg#align=left&display=inline&height=127&margin=%5Bobject%20Object%5D&originHeight=127&originWidth=853&status=done&style=none&width=853)
+
+其中”家“，”公司“，”出差“的位置信息已经非常贴合用户的实际信息了。
+
+但是仍然存在的**噪声点**的信息。这个暂时还没找到解决方案，下一步的思路是带入用户地理位置信息收集时候得到的附属信息如时间来辅助分析，希望可以有更好的结果。
+
+### 二、聚类算法学习之sklearn.cluster.KMeans
+```python
+class sklearn.cluster.KMeans(n_clusters=8, init=’k-means++’, n_init=10, max_iter=300, tol=0.0001, precompute_distances=’auto’, verbose=0, random_state=None, copy_x=True, n_jobs=1, algorithm=’auto’)
+```
+
 ```shell
 >>> from sklearn.cluster import KMeans
 >>> import numpy as np
@@ -450,20 +386,8 @@ array([0, 1], dtype=int32)
 array([[ 1.,  2.],
        [ 4.,  2.]])
 ```
-#### （四）相关方法
+**测试**
 
-| Methods | Description |
-| ---- | ---- |
-| fit(X[, y]) | Compute k-means clustering.计算k-means聚类 |
-| [`fit_predict`](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans.fit_predict)(X[, y]) | Compute cluster centers and predict cluster index for each sample.计算簇质心并给每个样本预测类别； |
-| [`fit_transform`](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans.fit_transform)(X[, y]) | Compute clustering and transform X to cluster-distance space.计算簇并把X装换到cluster-distance空间； |
-| [`get_params`](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans.get_params)([deep]) | Get parameters for this estimator.取得估计器的参数； |
-| [`predict`](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans.predict)(X) | Predict the closest cluster each sample in X belongs to.给每个样本估计最接近的簇； |
-| [`score`](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans.score)(X[, y]) | Opposite of the value of X on the K-means objective.算法目标相反的值； |
-| [`set_params`](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans.set_params)(`**params`) | Set the parameters of this estimator. |
-| transform(X) | Transform X to a cluster-distance space.将X转换入cluster-distance 空间。 |
-
-#### （五）测试
 ```python
 #encoding = utf-8
 """
